--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>ParseHL7ToMongoDB</groupId>
     <artifactId>ParseHL7ToMongoDB</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>ca.uhn.hapi</groupId>
+            <artifactId>hapi-base</artifactId>
+            <version>2.2</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
